<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="it.bancaprivataleasing.richiestapreventivo.ClienteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

    <TextView
        style="@style/header"
        android:text="@string/customer_name"/>

    <EditText
        android:id="@+id/customer_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="textCapWords"/>

    <TextView
        style="@style/header"
        android:text="@string/vat_number" />

    <EditText
        android:id="@+id/vat_number_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapCharacters"
        android:maxLines="1"
        android:hint="@string/vat_number_hint" />

    <TextView
        style="@style/header"
        android:text="@string/description" />

    <EditText
        android:id="@+id/description_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences|textAutoCorrect"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back_button"
            style="@style/button"
            android:layout_alignParentLeft="true"
            android:onClick="back"
            android:text="@string/back"
            android:visibility="invisible" />

        <Button
            android:id="@+id/next_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="next"
            android:text="@string/next" />
    </RelativeLayout>
</LinearLayout>
